--- a/foundry.toml
+++ b/foundry.toml
@@ -3,9 +3,17 @@ src = "src"
 out = "out"
 libs = ["lib"]
 
+ffi = true
+solc = "0.8.24"
+optimizer = true
+optimizer_runs = 200
+via_ir = true
+fs_permissions = [{ access = "read-write", path = "./" }]
+
 remappings = [
     "@openzeppelin/contracts=lib/openzeppelin-contracts/contracts",
-    '@chainlink/contracts/=lib/chainlink-brownie-contracts/contracts/'
+    '@chainlink/contracts/=lib/chainlink-brownie-contracts/contracts/',
+    'murky=lib/murky/src'
 ]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
