--- a/foundry.toml
+++ b/foundry.toml
@@ -13,7 +13,8 @@ fs_permissions = [{ access = "read-write", path = "./" }]
 remappings = [
     "@openzeppelin/contracts=lib/openzeppelin-contracts/contracts",
     '@chainlink/contracts/=lib/chainlink-brownie-contracts/contracts/',
-    'murky=lib/murky/src'
+    'murky=lib/murky/src',
+    'foundry-devops=lib/foundry-devops/src'
 ]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
